--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#37474f">
+  <meta name="theme-color" content="#263238">
   <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
